implementation for alert Level
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40294

--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertLevel/Templates/AlertLevelGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertLevel/Templates/AlertLevelGridTemplate.html
@@ -1,9 +1,11 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿<vr-datagrid datasource="scopeModel.alertLevel"
+             dataretrievalfunction="scopeModel.dataRetrievalFunction"
+             pagingtype="'PagingOnScroll'"
+             on-ready="scopeModel.onGridReady"
+             menuactions="scopeModel.menuActions"
+             idfield="Entity.VRAlertLevelId">
+    <vr-datagridcolumn headertext="'Id'" field="'Entity.VRAlertLevelId'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Alert Level Group'" field="'AlertLevelGroupDescription'"></vr-datagridcolumn>
 
-</body>
-</html>
+</vr-datagrid>
