--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertLevel/VRAlertLevelEditor.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertLevel/VRAlertLevelEditor.html
@@ -1,9 +1,36 @@
-﻿<!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-    <title></title>
-</head>
-<body>
+﻿<div vr-modalcontent ng-controller="VR_Notification_AlertLevelEditorController" width="'40%'" vr-loader="scopeModel.isLoading">
+    <vr-modalbody>
+        <vr-form name="formStatusDefinitionEditor">
+            <vr-tabs>
+                <vr-tab header="'Definition'">
+                    <vr-row>
+                        <vr-columns width="1/2row">
+                            <vr-textbox label="Name" value="scopeModel.name" isrequired></vr-textbox>
+                        </vr-columns>
+                        <vr-common-styledefinition-selector on-ready="scopeModel.onStyleDefinitionSelectorReady" normal-col-num="6" isrequired="true"></vr-common-styledefinition-selector>
+                    </vr-row>
+                    <vr-row>
+                        <vr-columns width="1/2row">
+                            <vr-genericdata-businessentitydefinition-selector on-ready="scopeModel.onBusinessEntityDefinitionSelectorReady"
+                                                                              isrequired="true"
+                                                                              customlabel="AlertLevel Group">
+                            </vr-genericdata-businessentitydefinition-selector>
+                        </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-textbox label="Weight" value="scopeModel.weight" type="number" isrequired></vr-textbox>
+                        </vr-columns>
 
-</body>
-</html>
+                    </vr-row>  
+                </vr-tab>
+            </vr-tabs>
+        </vr-form>
+    </vr-modalbody>
+    <div>
+        <vr-actionbar showcollapsebutton="false" issectioncollapsed="false">
+            <div transclude-to="buttons">
+                <vr-button type="Save" formname="formAlerLevelEditor" data-onclick="scopeModel.save" ></vr-button>
+                <vr-button type="Close" data-onclick="scopeModel.close"></vr-button>
+            </div>
+        </vr-actionbar>
+    </div>
+</div>
