--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertLevel/VRAlertLevelManagement.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Views/VRAlertLevel/VRAlertLevelManagement.html
@@ -6,14 +6,14 @@
                     <vr-textbox label="Name" value="name"></vr-textbox>
                 </vr-columns>
                 <vr-columns width="normal">
-                    <vr-genericdata-businessentitydefinition-selector customlabel="Alert Level Group" on-ready="onBusinessEntityDefinitionSelectorReady">
+                    <vr-genericdata-businessentitydefinition-selector customlabel="Alert Level Group" on-ready="onBusinessEntityDefinitionSelectorReady" ismultipleselection>
                     </vr-genericdata-businessentitydefinition-selector>                    
                 </vr-columns>
-                <!--<vr-columns width="normal">
+                <vr-columns width="normal">
                     <vr-notification-alertlevel-selector on-ready="onAlertLevelSelectorReady"
                                                        
                                                          customlabel="AlertLevel Selector"></vr-notification-alertlevel-selector>
-                </vr-columns>-->
+                </vr-columns>
             </vr-row>
         </div>
         <vr-row removeline>
