--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRNotification/Templates/VRNotificationComponentTypeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRNotification/Templates/VRNotificationComponentTypeSettingsTemplate.html
@@ -4,7 +4,11 @@
             <vr-columns width="1/2row">
                 <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
             </vr-columns>
-        </vr-row>
+            <vr-columns width="1/2row">
+                <vr-genericdata-businessentitydefinition-selector customlabel="Alert Level Group" on-ready="scopeModel.onBusinessEntityDefinitionSelectorReady" >
+                </vr-genericdata-businessentitydefinition-selector>
+            </vr-columns>
+            </vr-row>
     </vr-tab>
     <vr-tab header="'Settings'">
         <vr-row>
