changing Alert Level Group Selector to required
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40317

--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRNotification/Templates/VRNotificationComponentTypeSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRNotification/Templates/VRNotificationComponentTypeSettingsTemplate.html
@@ -5,7 +5,7 @@
                 <vr-textbox value="scopeModel.name" label="Name" isrequired></vr-textbox>
             </vr-columns>
             <vr-columns width="1/2row">
-                <vr-genericdata-businessentitydefinition-selector customlabel="Alert Level Group" on-ready="scopeModel.onBusinessEntityDefinitionSelectorReady" >
+                <vr-genericdata-businessentitydefinition-selector customlabel="Alert Level Group" on-ready="scopeModel.onBusinessEntityDefinitionSelectorReady" isrequired="true">
                 </vr-genericdata-businessentitydefinition-selector>
             </vr-columns>
             </vr-row>
