implementing Object Tracking Drill Down in Invoice Types and Mail Message Type
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40319

--- a/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/Templates/InvoiceTypeGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Invoice.Web/VR_Invoice/Directives/InvoiceType/Templates/InvoiceTypeGridTemplate.html
@@ -6,4 +6,7 @@
              idfield="Entity.InvoiceTypeId">
     <vr-datagridcolumn headertext="'ID'" type="'Text'" field="'Entity.InvoiceTypeId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" type="'Text'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
