--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRMail/Templates/VRMailMessageTypeGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRMail/Templates/VRMailMessageTypeGridTemplate.html
@@ -6,4 +6,7 @@
              idfield="Entity.VRMailMessageTypeId">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.VRMailMessageTypeId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
