--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/StatusDefinition/Templates/StatusDefinitionGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/StatusDefinition/Templates/StatusDefinitionGridTemplate.html
@@ -7,5 +7,7 @@
     <vr-datagridcolumn headertext="'Id'" field="'Entity.StatusDefinitionId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Status Group'" field="'StatusGroupDescription'"></vr-datagridcolumn>
-
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
