--- a/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertLevel/Templates/AlertLevelGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Notification.Web/VR_Notification/Directives/VRAlertLevel/Templates/AlertLevelGridTemplate.html
@@ -7,5 +7,7 @@
     <vr-datagridcolumn headertext="'Id'" field="'Entity.VRAlertLevelId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Alert Level Group'" field="'BusinessEntityDefinitionName'"></vr-datagridcolumn>
-
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
