Added Old Code BED to Moved Code. This is needed in pricelist changes
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40344

--- a/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Views/Dialogs/MoveCodeDialog.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.CodePreparation.Web/WhS_CodePreparation/Views/Dialogs/MoveCodeDialog.html
@@ -14,7 +14,7 @@
                     </div>
 
                     <vr-datalist maxitemsperrow="3" datasource="codes" >
-                        {{dataItem}}
+                        {{dataItem.Code}}
                     </vr-datalist>
                 </vr-columns>
             </vr-row>
