--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/BillingTransaction/BillingTransactionEditor.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/BillingTransaction/BillingTransactionEditor.html
@@ -4,7 +4,7 @@
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row removeline>
-                        <vr-accountbalance-account-selector on-ready="scopeModel.onAccountDirectiveReady" normal-col-num="6" ng-if="scopeModel.showAccountSelector" isrequired="true"></vr-accountbalance-account-selector>
+                        <vr-accountbalance-account-selector on-ready="scopeModel.onAccountSelectorReady" normal-col-num="6" ng-if="scopeModel.showAccountSelector" isrequired="true"></vr-accountbalance-account-selector>
 
                         <vr-columns width="1/2row">
                             <vr-textbox label="Amount" value="scopeModel.amount" isrequired="true" type="number"></vr-textbox>
@@ -12,7 +12,7 @@
 
                         <vr-common-currency-selector on-ready="scopeModel.onCurrencySelectorReady" isrequired="true" normal-col-num="6"></vr-common-currency-selector>
 
-                        <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeReady" isrequired="true" normal-col-num="6" hideremoveicon></vr-accountbalance-billingtransactiontype-selector>
+                        <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onBillingTransactionTypeSelectorReady" isrequired="true" normal-col-num="6" hideremoveicon></vr-accountbalance-billingtransactiontype-selector>
 
                         <vr-columns width="1/2row">
                             <vr-textbox label="Reference" value="scopeModel.reference" isrequired="true"></vr-textbox>
