--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/MainExtensions/DataRecord/VRActionDefinition/Templates/VRActionDefinitionSendEmail.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/MainExtensions/DataRecord/VRActionDefinition/Templates/VRActionDefinitionSendEmail.html
@@ -1,8 +1,27 @@
-﻿<vr-columns colnum="6">
-    <vr-genericdata-datarecordtype-selector on-ready="scopeModel.onDataRecordTypeSelectorReady" isrequired="true"
-                                            label="Record Type" hideremoveicon></vr-genericdata-datarecordtype-selector>
-</vr-columns>
-<vr-columns colnum="6">
-    <vr-common-mailmessagetype-selector on-ready="scopeModel.onMailMessageTypeSelectorReady" isrequired="true"
-                                        hideremoveicon></vr-common-mailmessagetype-selector>
-</vr-columns>
+﻿<vr-row>
+    <vr-columns colnum="4">
+        <vr-genericdata-datarecordtype-selector on-ready="scopeModel.onDataRecordTypeSelectorReady" isrequired="true" selectedvalues="scopeModel.selectedDataRecordType"
+                                                label="Record Type" hideremoveicon onselectionchanged="scopeModel.onDataRecordTypeSelectionChanged"></vr-genericdata-datarecordtype-selector>
+    </vr-columns>
+    <vr-columns colnum="4">
+        <vr-common-mailmessagetype-selector on-ready="scopeModel.onMailMessageTypeSelectorReady" isrequired="true" onselectionchanged="scopeModel.onMailMessageTypeSelectionChanged"
+                                            hideremoveicon selectedvalues="scopeModel.selectedMailMessageType"></vr-common-mailmessagetype-selector>
+    </vr-columns>
+
+    <vr-columns colnum="4" vr-loader="scopeModel.onObjectTypeDefinitionsLoading" ng-if="scopeModel.selectedMailMessageType!=undefined && scopeModel.selectedDataRecordType!=undefined">
+        <vr-select datatextfield="ObjectName" datavaluefield="ObjectName" label="Output Record Field" datasource="scopeModel.objectTypeDefinitions"
+                   on-ready="scopeModel.onObjectTypeDefinitionSelectorReady" selectedvalues="scopeModel.selectDataRecordObjectType" entityname="Output Record Field">
+        </vr-select>
+    </vr-columns>
+</vr-row>
+
+<vr-row>
+    <vr-columns colnum="12" ng-if="scopeModel.selectedMailMessageType!=undefined && scopeModel.selectedDataRecordType!=undefined">
+        <vr-datagrid on-ready="scopeModel.onGridReady" datasource="scopeModel.objectVariables" hidegridmenu>
+            <vr-datagridcolumn headertext="'Object Name'" type="'Text'" field="'ObjectName'" widthfactor="5" disablesorting></vr-datagridcolumn>
+            <vr-datagridcolumn headertext="'Record Field'" widthfactor="5" disablesorting>
+                <vr-genericdata-datarecordtypefields-selector on-ready="dataItem.onDataRecordFieldSelectorReady" hidelabel></vr-genericdata-datarecordtypefields-selector>
+            </vr-datagridcolumn>
+        </vr-datagrid>
+    </vr-columns>
+</vr-row>
