--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Views/AlertRuleRecordEditor.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Elements/Notification/DataRecord/Views/AlertRuleRecordEditor.html
@@ -4,6 +4,9 @@
             <vr-tabs>
                 <vr-tab header="'Criteria'">
                     <vr-row>
+                        <vr-notification-alertlevel-selector isrequired="true" normal-col-num="3" on-ready="scopeModel.onVRNotificationAlertlevelSelectorReady"></vr-notification-alertlevel-selector>
+                    </vr-row>
+                    <vr-row>
                         <vr-columns width="fullrow">
                             <vr-validator default validate="scopeModel.validateRecordFilter()">
                                 <vr-section title="Record Filter" collapsible>
