--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/RecordType/Templates/DataRecordTypeGrid.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/RecordType/Templates/DataRecordTypeGrid.html
@@ -8,4 +8,7 @@
     <vr-datagridcolumn headertext="'ID'" field="'Entity.DataRecordTypeId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Parent Name'" field="'ParentName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
