--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRuleDefinition/Templates/GenericRuleDefinitionGridTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/GenericRuleDefinition/Templates/GenericRuleDefinitionGridTemplate.html
@@ -7,5 +7,7 @@
     <vr-datagridcolumn headertext="'Id'" type="'Text'" field="'GenericRuleDefinitionId'" widthfactor="1"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" type="'Text'" field="'Name'" widthfactor="9"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Title'" type="'Text'" field="'Title'" widthfactor="9"></vr-datagridcolumn>
-
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>  
