--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/DataTransformationDefinition/Templates/DataTransformationDefinitionGrid.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/DataTransformationDefinition/Templates/DataTransformationDefinitionGrid.html
@@ -8,4 +8,7 @@
     <vr-datagridcolumn headertext="'ID'" field="'Entity.DataTransformationDefinitionId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Title'" field="'Entity.Title'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
