cssClass to vr-datagridcolumn implementation
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40360

--- a/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
+++ b/Vanrise/Code/Vanrise.Web/Client/Styles/Styles.css
@@ -1901,6 +1901,9 @@ vr-datagrid[hideheader="true"] .vr-datagrid {
     background-color: #ddd !important;
     cursor: pointer !important;
 }
+.vr-datagrid-datacells:hover .vr-datagrid-cell-container {
+    background-color: inherit !important;
+}
 
 .vr-datagrid-datacells-click {
     background-color: #ddd !important;
