--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/DataRecordStorage/Templates/DataRecordStorageGridTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/DataRecordStorage/Templates/DataRecordStorageGridTemplate.html
@@ -6,4 +6,7 @@
              idfield="Entity.DataRecordStorageId">
     <vr-datagridcolumn headertext="'Id'" type="'Text'" field="'Entity.DataRecordStorageId'" widthfactor="1"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" type="'Text'" field="'Entity.Name'" widthfactor="9"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
