--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/BESettingsCachingExpirationIntervalsTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/Settings/Templates/BESettingsCachingExpirationIntervalsTemplate.html
@@ -1,10 +1,13 @@
 ﻿<vr-section title="Caching Expiration Intervals (min)">
     <vr-row>
-        <vr-columns width="1/2row">
+        <vr-columns width="1/3row">
             <vr-textbox value="scopeModel.todayEntitiesIntervalInMinutes" type="number" label="Today Entities" minvalue="0" decimalprecision="0"></vr-textbox>
         </vr-columns>
-        <vr-columns width="1/2row">
-            <vr-textbox value="scopeModel.previousEntitiesIntervalInMinutes" type="number" label="Previous Entites" isrequired="true" minvalue="0" decimalprecision="0"></vr-textbox>
+        <vr-columns width="1/3row">
+            <vr-textbox value="scopeModel.previousEntitiesIntervalInMinutes" type="number" label="Previous Entities" isrequired="true" minvalue="0" decimalprecision="0"></vr-textbox>
+        </vr-columns>
+        <vr-columns width="1/3row">
+            <vr-textbox value="scopeModel.supplierZonesIntevalInMinutes" type="number" label="Supplier Zones" minvalue="0" decimalprecision="0"></vr-textbox>
         </vr-columns>
     </vr-row>
 </vr-section>
