--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/SalePriceList/SalePriceListChange.html
@@ -1,18 +1,16 @@
 ﻿<div vr-modalcontent ng-controller="WhS_BE_SalePriceListPreviewController" vr-loader="isLoading" vr-modalcontent size="medium">
     <vr-modalbody>
         <vr-form name="formSalePriceListPreview">
+            <vr-row removeline>
+                <vr-columns width="normal" haschildcolumns>
+                    <vr-common-country-selector on-ready="onCountryReady" ismultipleselection></vr-common-country-selector>
+                </vr-columns>
+            </vr-row>
             <vr-tabs>
                 <vr-tab header="'Rates'">
                     <vr-form name="formRateFilter">
-                        <div ng-hide="filterSectionCollapsed">
-                            <vr-row removeline>
-                                <vr-columns width="normal" haschildcolumns>
-                                    <vr-common-country-selector on-ready="onRateCountryReady" ismultipleselection></vr-common-country-selector>
-                                </vr-columns>
-                            </vr-row>
-                        </div>
                         <vr-row removeline>
-                            <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+                            <vr-actionbar showcollapsebutton="false" issectioncollapsed="filterSectionCollapsed">
                                 <div transclude-to="buttons">
                                     <vr-button type="Search" formname="formRateFilter" data-onclick="searchRateClicked"></vr-button>
                                 </div>
@@ -28,15 +26,8 @@
                 </vr-tab>
                 <vr-tab header="'Codes'" dontload="true">
                     <vr-form name="formCodeFilter">
-                        <div ng-hide="filterSectionCollapsed">
-                            <vr-row removeline>
-                                <vr-columns width="normal" haschildcolumns>
-                                    <vr-common-country-selector on-ready="onCodeCountryReady" ismultipleselection></vr-common-country-selector>
-                                </vr-columns>
-                            </vr-row>
-                        </div>
                         <vr-row removeline>
-                            <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
+                            <vr-actionbar showcollapsebutton="false" issectioncollapsed="filterSectionCollapsed">
                                 <div transclude-to="buttons">
                                     <vr-button type="Search" formname="formCodeFilter" data-onclick="searchCodeClicked"></vr-button>
                                 </div>
