--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/AccountBalances/AccountBalancesManagement.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/AccountBalances/AccountBalancesManagement.html
@@ -31,7 +31,7 @@
         </vr-row>
         <vr-row>
             <vr-columns width="fullrow">
-                <vr-accountbalance-accountbalances-grid ng-if="scopeModel.gridloadded" on-ready="scopeModel.onGridReady"></vr-accountbalance-accountbalances-grid>
+                <vr-accountbalance-accountbalances-grid  on-ready="scopeModel.onGridReady"></vr-accountbalance-accountbalances-grid>
             </vr-columns>
         </vr-row>
     </vr-form>
