--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/SummaryTransformationDefinition/Templates/SummaryTransformationDefinitionGrid.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/SummaryTransformationDefinition/Templates/SummaryTransformationDefinitionGrid.html
@@ -7,4 +7,7 @@
 
     <vr-datagridcolumn headertext="'ID'" field="'Entity.SummaryTransformationDefinitionId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
