--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/BELookupRuleDefinition/Templates/BELookupRuleDefinitionGridTemplate.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/BELookupRuleDefinition/Templates/BELookupRuleDefinitionGridTemplate.html
@@ -6,4 +6,7 @@
              idfield="Entity.BELookupRuleDefinitionId">
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Business Entity Definition Name'" field="'BusinessEntityDefinitionName'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
