implementing object tracking drill down in data record field choice
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40376

--- a/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/DataRecordFieldChoice/Templates/DataRecordFieldChoiceGrid.html
+++ b/Vanrise/Code/Vanrise.GenericData.Web/VR_GenericData/Directives/DataRecordFieldChoice/Templates/DataRecordFieldChoiceGrid.html
@@ -7,5 +7,8 @@
 
     <vr-datagridcolumn headertext="'ID'" field="'Entity.DataRecordFieldChoiceId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
 
