--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/AnalyticReport/Templates/AnalyticReportGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/AnalyticReport/Templates/AnalyticReportGridTemplate.html
@@ -6,4 +6,7 @@
              idfield="Entity.AnalyticTableId">
 
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
