--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeGridColumnEditor.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeGridColumnEditor.html
@@ -4,11 +4,20 @@
             <vr-tabs>
                 <vr-tab header="'Definition'">
                     <vr-row>
-                        <vr-accountbalance-accounttype-sources-selector on-ready="scopeModel.onSourcesSelectorReady" onselectionchanged="scopeModel.onSourceSelectionChanged" normal-col-num="4" isrequired="true"></vr-accountbalance-accounttype-sources-selector>
-                        <vr-accountbalance-accounttype-sourcefields-selector on-ready="scopeModel.onSourceFieldsSelectorReady" normal-col-num="4" isrequired="true"></vr-accountbalance-accounttype-sourcefields-selector>
-                        <vr-columns width="1/3row">
+                        <vr-accountbalance-accounttype-sources-selector on-ready="scopeModel.onSourcesSelectorReady" onselectionchanged="scopeModel.onSourceSelectionChanged" normal-col-num="6" isrequired="true"></vr-accountbalance-accounttype-sources-selector>
+                        <vr-accountbalance-accounttype-sourcefields-selector on-ready="scopeModel.onSourceFieldsSelectorReady" normal-col-num="6" isrequired="true"></vr-accountbalance-accounttype-sourcefields-selector>
+                        <vr-columns width="1/2row">
                             <vr-textbox value="scopeModel.title" label="Header" isrequired="true"></vr-textbox>
                         </vr-columns>
+                        <vr-columns width="1/2row">
+                            <vr-select label="Field Color"
+                                       datasource="scopeModel.fieldColors"
+                                       selectedvalues="scopeModel.selectedFieldColor"
+                                       datatextfield="description"
+                                       datavaluefield="value">
+                            </vr-select>
+                        </vr-columns>
+                        
                     </vr-row>
                 </vr-tab>
             </vr-tabs>
