--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/AccountBalances/AccountBalancesManagement.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Views/AccountBalances/AccountBalancesManagement.html
@@ -2,22 +2,31 @@
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed">
             <vr-row removeline>
+                <vr-columns width="fullrow">
+                    <vr-choices-filter selectedindex="selectedFilternIndex">
+                        <vr-choice-filter isselected="basicSelected">Basic</vr-choice-filter>
+                        <vr-choice-filter isselected="advancedSelected">Advanced</vr-choice-filter>
+                    </vr-choices-filter>
+                </vr-columns>
+            </vr-row>
+
+            <vr-row removeline>
                 <vr-accountbalance-accounttype-selector ng-hide="scopeModel.hideAccountType" normal-col-num="2" on-ready="scopeModel.onAccountTypeSelectorReady" selectedvalues="scopeModel.accountType"
                                                         onselectionchanged="scopeModel.onAccountTypeSelectorSelectionChange" customlabel="Account Type"
                                                         isrequired="true" hideremoveicon></vr-accountbalance-accounttype-selector>
                 <vr-accountbalance-account-selector on-ready="scopeModel.onAccountDirectiveReady" normal-col-num="2" ng-if="scopeModel.accountType!=undefined" ismultipleselection></vr-accountbalance-account-selector>
-                <vr-columns colnum="1" ng-show="scopeModel.accountType">
+                <vr-columns colnum="1" ng-if="scopeModel.accountType && advancedselected">
                     <vr-select hidefilterbox="true" label="Balance" datatextfield="text" datavaluefield="value"
                                datasource="scopeModel.signs" selectedvalues="scopeModel.sign" onselectionchanged="scopeModel.onSignSelectionChanged"></vr-select>
                 </vr-columns>
-                <vr-columns colnum="1" withemptyline ng-show="scopeModel.accountType">
+                <vr-columns colnum="1" withemptyline ng-if="scopeModel.accountType && advancedSelected">
                     <vr-textbox type="number" isrequired="scopeModel.sign!=undefined" value="scopeModel.balance"></vr-textbox>
                 </vr-columns>
-                <vr-columns colnum="1" ng-show="scopeModel.accountType">
+                <vr-columns colnum="1" ng-if="scopeModel.accountType && advancedSelected">
                     <vr-select hideremoveicon="true" label="Balance Order By" datatextfield="description" datavaluefield="value"
                                datasource="scopeModel.orderByOptions" selectedvalues="scopeModel.orderBy" isrequired="true"></vr-select>
                 </vr-columns>
-                <vr-columns width="normal" ng-show="scopeModel.accountType">
+                <vr-columns width="normal" ng-if="scopeModel.accountType && advancedSelected">
                     <vr-numeric label="Top" isrequired="true" value="scopeModel.top" minvalue="1"></vr-numeric>
                 </vr-columns>
             </vr-row>
