--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/DataAnalysisItemDefinition/Templates/DataAnalysisItemDefinitionGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/DataAnalysisItemDefinition/Templates/DataAnalysisItemDefinitionGridTemplate.html
@@ -1,6 +1,4 @@
-﻿
-
-<vr-datagrid datasource="scopeModel.dataAnalysisItemDefinition"
+﻿<vr-datagrid datasource="scopeModel.dataAnalysisItemDefinition"
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              on-ready="scopeModel.onGridReady"
