--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeGridColumnEditor.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/MainExtensions/Account/Templates/VRAccountTypeGridColumnEditor.html
@@ -9,15 +9,7 @@
                         <vr-columns width="1/2row">
                             <vr-textbox value="scopeModel.title" label="Header" isrequired="true"></vr-textbox>
                         </vr-columns>
-                        <vr-columns width="1/2row">
-                            <vr-select label="Field Color"
-                                       datasource="scopeModel.fieldColors"
-                                       selectedvalues="scopeModel.selectedFieldColor"
-                                       datatextfield="description"
-                                       datavaluefield="value">
-                            </vr-select>
-                        </vr-columns>
-                        
+                        <vr-common-gridcolcssclass-selector on-ready="scopeModel.onGridColCSSClassSelectorReady" normal-col-num="6"></vr-common-gridcolcssclass-selector>
                     </vr-row>
                 </vr-tab>
             </vr-tabs>
