--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleSettingsTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/DataAnalysis/ProfilingAndCalculation/AlertRuleExtensions/Templates/DAProfCalcAlertRuleSettingsTemplate.html
@@ -1,8 +1,7 @@
 ﻿<vr-tab header="'Criteria'">
     <vr-row>
         <vr-columns width="fullrow">
-            <vr-analytic-daprofcalc-alertrulecriteria on-ready="scopeModel.onCriteriaDirectiveReady"
-                                                      on-criteria-selection-changed="scopeModel.onCriteriaSelectionChanged">
+            <vr-analytic-daprofcalc-alertrulecriteria on-ready="scopeModel.onCriteriaDirectiveReady" on-criteria-selection-changed="scopeModel.onCriteriaSelectionChanged">
             </vr-analytic-daprofcalc-alertrulecriteria>
         </vr-columns>
     </vr-row>
