Update Agent Number Request
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40398

--- a/Retail/Code/Retail.Ringo.Web/Retail_Ringo/Directives/AgentRequestNumber/Templates/AgentRequestNumberGridTemplate.html
+++ b/Retail/Code/Retail.Ringo.Web/Retail_Ringo/Directives/AgentRequestNumber/Templates/AgentRequestNumberGridTemplate.html
@@ -3,7 +3,7 @@
                  dataretrievalfunction="scopeModel.dataRetrievalFunction"
                  pagingtype="'PagingOnScroll'"
                  on-ready="scopeModel.onGridReady"
-                 menuactions="scopeModel.menuActions"
+                 menuactions="scopeModel.gridMenuActions"
                  idfield="Entity.Id" enableautoexport="true">
         <vr-datagridcolumn headertext="'ID'" field="'Entity.Id'"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Agent'" field="'AgentName'"></vr-datagridcolumn>
