--- a/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/AnalyticConfig/Templates/AnalyticAggregateGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Analytic.Web/Analytic/Directives/Definition/AnalyticConfig/Templates/AnalyticAggregateGridTemplate.html
@@ -7,4 +7,7 @@
 
     <vr-datagridcolumn headertext="'Name'" field="'Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Title'" field="'Title'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
