--- a/Vanrise/Code/Vanrise.Security.Web/Security/Directives/View/Templates/ViewGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Security.Web/Security/Directives/View/Templates/ViewGridTemplate.html
@@ -8,5 +8,7 @@
 
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Title'" field="'Entity.Title'"></vr-datagridcolumn>
-
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
