--- a/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Directives/QueueItemHeader/Templates/QueueItemHeaderGridTemplate.html
+++ b/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Directives/QueueItemHeader/Templates/QueueItemHeaderGridTemplate.html
@@ -3,7 +3,7 @@
              pagingtype="'PagingOnScroll'"
              on-ready="gridReady"
              defaultsortbyfieldname="'Entity.ItemId'"
-             idfield="Entity.ItemId">
+             idfield="Entity.ItemId" enableautoexport="true">
     <vr-datagridcolumn headertext="'Item Id'" field="'Entity.ItemId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Stage Name'" field="'StageName'" disablesorting></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Description'" field="'Entity.Description'"></vr-datagridcolumn>
