Export to excel
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40431

--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/ActionAudit/Templates/ActionAuditGridTemplate.html
@@ -3,7 +3,7 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
-             idfield="Entity.VRActionAuditId" defaultsortdirection="'DESC'" defaultsortbyfieldname="'Entity.LogTime'">
+             idfield="Entity.VRActionAuditId" defaultsortdirection="'DESC'" defaultsortbyfieldname="'Entity.LogTime'" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.VRActionAuditId'" type="'Text'" widthfactor="1"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Time'" field="'Entity.LogTime'" type="'LongDatetime'" fixedwidth="120"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'User'" field="'UserName'" type="'Text'" fixedwidth="150"></vr-datagridcolumn>
