--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/ImportedBatchGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/ImportedBatchGridTemplate.html
@@ -4,7 +4,7 @@
              pagingtype="'PagingOnScroll'"
              on-ready="gridReady"
              defaultsortbyfieldname="'ID'"
-             idfield="ID">
+             idfield="ID" enableautoexport="true">
 
     <vr-datagridcolumn headertext="'ID'" field="'ID'" widthfactor="3"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Batch Description'" field="'BatchDescription'" widthfactor="8"></vr-datagridcolumn>
