--- a/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/LogGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Integration.Web/Integration/Directives/DataSource/Templates/LogGridTemplate.html
@@ -2,7 +2,7 @@
              datasource="logs"
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
-             on-ready="gridReady" normalcell="true">
+             on-ready="gridReady" normalcell="true" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'ID'" widthfactor="5"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Severity'" field="'SeverityDescription'" widthfactor="10" getcolor="getSeverityColor"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Message'" field="'Message'" widthfactor="70" expendablecolumn></vr-datagridcolumn>
