--- a/Vanrise/Code/Vanrise.Common.Web/Common/Views/CurrencyExchangeRate/CurrencyExchangeRateEditor.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Views/CurrencyExchangeRate/CurrencyExchangeRateEditor.html
@@ -11,7 +11,7 @@
             </vr-row>
             <vr-row removeline>
                 <vr-columns width="1/2row">
-                    <vr-datetimepicker type="date" label="Exchange Date" value="exchangeDate" isrequired vr-disabled="disableControls"></vr-datetimepicker>
+                    <vr-datetimepicker type="date" label="Exchange Date" value="exchangeDate" isrequired vr-disabled="disableControls" customvalidate="validateTodayDateTime()"></vr-datetimepicker>
                 </vr-columns>
             </vr-row>
         </vr-form>
