--- a/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRComponentType/Templates/VRComponentTypeGridTemplate.html
+++ b/Vanrise/Code/Vanrise.Common.Web/Common/Directives/VRComponentType/Templates/VRComponentTypeGridTemplate.html
@@ -6,4 +6,7 @@
              idfield="Entity.VRComponentTypeId">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.VRComponentTypeId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
