convert to excel
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40438

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/RoutingProduct/Templates/RoutingProductGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/RoutingProduct/Templates/RoutingProductGridTemplate.html
@@ -4,7 +4,7 @@
              pagingtype="'PagingOnScroll'"
              on-ready="onGridReady"
              menuactions="gridMenuActions"
-             idfield="Entity.RoutingProductId">
+             idfield="Entity.RoutingProductId" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.RoutingProductId'" widthfactor="5"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Selling Number Plan'" field="'SellingNumberPlan'"></vr-datagridcolumn>
