--- a/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/RouteSyncDefinition/Templates/RouteSyncDefinitionGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.RouteSync.Web/WhS_RouteSync/Directives/RouteSyncDefinition/Templates/RouteSyncDefinitionGridTemplate.html
@@ -3,7 +3,7 @@
              pagingtype="'PagingOnScroll'"
              on-ready="scopeModel.onGridReady"
              menuactions="scopeModel.menuActions"
-             idfield="Entity.RouteSyncDefinitionId">
+             idfield="Entity.RouteSyncDefinitionId" enableautoexport="true">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.RouteSyncDefinitionId'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
 </vr-datagrid> 
