--- a/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Directives/ExecutionFlowDefinition/Templates/ExecutionFlowDefinitionGrid.html
+++ b/BusinessProcess/Code/Vanrise.Queueing.Web/Queueing/Directives/ExecutionFlowDefinition/Templates/ExecutionFlowDefinitionGrid.html
@@ -8,4 +8,7 @@
     <vr-datagridcolumn headertext="'ID'" field="'Entity.ID'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Name'" field="'Entity.Name'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Title'" field="'Entity.Title'"></vr-datagridcolumn>
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
