Implementing period for financial transaction and adding fields for tone custom fields
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40444

--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/CustomerPostpaid/Templates/CustomerPostpaidDefinitionSettings.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Directives/FinancialAccountTypes/CustomerPostpaid/Templates/CustomerPostpaidDefinitionSettings.html
@@ -1,3 +1,3 @@
 ﻿<vr-row>
-        <vr-accountbalance-billingtransactiontype-selector normal-col-num="6" on-ready="scopeModel.onUsageTransactionTypeReady" isrequired="true"></vr-accountbalance-billingtransactiontype-selector>
+        <vr-accountbalance-billingtransactiontype-selector normal-col-num="6" on-ready="scopeModel.onUsageTransactionTypeReady" isrequired="true" customlabel="Usage Transaction Type"></vr-accountbalance-billingtransactiontype-selector>
 </vr-row>
