--- a/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Views/FinancialAccountEditor.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.AccountBalance.Web/WhS_AccountBalance/Elements/FinancialAccount/Views/FinancialAccountEditor.html
@@ -16,7 +16,7 @@
                             <vr-datetimepicker value="scopeModel.beginEffectiveDate" type="date" label="BED" isrequired customvalidate="scopeModel.validateDates()"></vr-datetimepicker>
                         </vr-columns>
                         <vr-columns width="1/2row">
-                            <vr-datetimepicker value="scopeModel.endEffectiveDate" type="date" label="EED" customvalidate="scopeModel.validateDates()"></vr-datetimepicker>
+                            <vr-datetimepicker value="scopeModel.endEffectiveDate" type="date" label="EED" customvalidate="scopeModel.validateEEDDate()" vr-disabled="scopeModel.disableEED"></vr-datetimepicker>
                         </vr-columns>
                     </vr-row>
                 </vr-tab>
