--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/BillingTransaction/Templates/BillingTransactionSearch.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/BillingTransaction/Templates/BillingTransactionSearch.html
@@ -1,16 +1,14 @@
 ﻿<vr-row removeline vr-loader="scopeModel.isLoading">
     <vr-accountbalance-billingtransactiontype-selector on-ready="scopeModel.onTransactionTypeSelectorReady" normal-col-num="2" ismultipleselection></vr-accountbalance-billingtransactiontype-selector>
-    <vr-columns width="normal">
-        <vr-datetimepicker type="dateTime" label="From" isrequired="true" value="scopeModel.fromTime" customvalidate="scopeModel.validateDateTime()"></vr-datetimepicker>
-    </vr-columns>
-    <vr-columns width="normal">
-        <vr-datetimepicker type="dateTime" label="To" value="scopeModel.toTime" customvalidate="scopeModel.validateDateTime()"></vr-datetimepicker>
+ 
+    <vr-columns colnum="6" haschildcolumns>
+        <vr-timerange on-ready="scopeModel.onTimeRangeDirectiveReady " width="1/3row" type="dateTime" from="scopeModel.fromTime" to="scopeModel.toTime" period="selectedPeriod" isrequired="false"></vr-timerange>
     </vr-columns>
     <vr-columns width="normal" withemptyline>
         <vr-button type="Search" standalone data-onclick="scopeModel.searchClicked" vr-disabled="scopeModel.fromTime==undefined || scopeModel.fromTime== null ||  scopeModel.validateDateTime()!=null"></vr-button>
         <vr-button type="Add" standalone data-onclick="scopeModel.addTransaction" ng-show="scopeModel.hasAddTransaction"></vr-button>
     </vr-columns>
-    <vr-columns width="1/3row" withemptyline>
+    <vr-columns width="normal" withemptyline>
         <div class="pull-right">
             <vr-label isvalue>Current Balance:</vr-label>
             <vr-label>{{scopeModel.balance |  vrtextOrNumber : 2}}</vr-label>
