adding validation group
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40445

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierProfileManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierProfileManagement.html
@@ -2,24 +2,28 @@
 
     <vr-form name="formFilter">
         <div ng-hide="filterSectionCollapsed" vr-loader="isLoadingFilters">
-            <vr-row removeline>
-                <vr-columns width="normal">
-                    <vr-textbox value="name" label="Name"></vr-textbox>
-                </vr-columns>
+            <vr-validation-group validationcontext="validationForm">
+                <vr-row removeline>
+                    <vr-columns width="normal">
+                        <vr-textbox value="name" label="Name"></vr-textbox>
+                    </vr-columns>
 
-                <vr-columns width="normal">
-                    <vr-textbox value="company" label="Company"></vr-textbox>
-                </vr-columns>
+                    <vr-columns width="normal">
+                        <vr-textbox value="company" label="Company"></vr-textbox>
+                    </vr-columns>
 
-                <vr-columns width="normal" haschildcolumns>
-                    <vr-common-country-selector on-ready="onCountryDirectiveReady" ismultipleselection></vr-common-country-selector>
-                </vr-columns>
-            </vr-row>
-        </div>
+                    <vr-columns width="normal" haschildcolumns>
+                        <vr-common-country-selector on-ready="onCountryDirectiveReady" ismultipleselection></vr-common-country-selector>
+                    </vr-columns>
+                </vr-row>
+                </vr-validationgroup>
+
+            </div>
+
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
-                    <vr-button type="Search" formname="formFilter" data-onclick="searchClicked"></vr-button>
+                    <vr-button type="Search" validationcontext="validationForm" data-onclick="searchClicked"></vr-button>
                     <vr-button type="Add" data-onclick="AddNewCarrierProfile" haspermission="hadAddCarrierProfilePermission"></vr-button>
                 </div>
             </vr-actionbar>
@@ -29,7 +33,7 @@
                 <vr-whs-be-carrierprofile-grid on-ready="onGridReady"></vr-whs-be-carrierprofile-grid>
             </vr-columns>
         </vr-row>
-        
     </vr-form>
+
 
 </vr-panel>
