--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountManagement.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Views/CarrierAccount/CarrierAccountManagement.html
@@ -2,43 +2,45 @@
 
     <vr-form name="formFilter" vr-loader="isLoading">
         <div ng-hide="filterSectionCollapsed">
-            <vr-row removeline>
-                <vr-columns colnum="2">
-                    <vr-textbox value="name" label="Account"></vr-textbox>
-                </vr-columns>
-                <vr-columns width="normal" haschildcolumns>
-                    <vr-whs-be-carrierprofile-selector on-ready="onCarrierProfileDirectiveReady" ismultipleselection></vr-whs-be-carrierprofile-selector>
-                </vr-columns>
+            <vr-validation-group validationcontext="validationForm">
+                <vr-row removeline>
+                    <vr-columns colnum="2">
+                        <vr-textbox value="name" label="Account"></vr-textbox>
+                    </vr-columns>
+                    <vr-columns width="normal" haschildcolumns>
+                        <vr-whs-be-carrierprofile-selector on-ready="onCarrierProfileDirectiveReady" ismultipleselection></vr-whs-be-carrierprofile-selector>
+                    </vr-columns>
 
-                <vr-whs-be-activationstatus-selector normal-col-num="2" ismultipleselection on-ready="onActivationStatusDirectiveReady">
-                </vr-whs-be-activationstatus-selector>
+                    <vr-whs-be-activationstatus-selector normal-col-num="2" ismultipleselection on-ready="onActivationStatusDirectiveReady">
+                    </vr-whs-be-activationstatus-selector>
 
-                <vr-columns colnum="2">
-                    <vr-select datatextfield="description" datavaluefield="value" label="Carrier Type" datasource="carrierAccountTypes"
-                               selectedvalues="selectedCarrierAccountTypes" ismultipleselection onselectionchanged="onCarrierTypeSelectionChanged">
-                </vr-columns>
+                    <vr-columns colnum="2">
+                        <vr-select datatextfield="description" datavaluefield="value" label="Carrier Type" datasource="carrierAccountTypes"
+                                   selectedvalues="selectedCarrierAccountTypes" ismultipleselection onselectionchanged="onCarrierTypeSelectionChanged">
+                    </vr-columns>
 
-                <span vr-loader="isLoadingSellingNumberPlan" ng-show="showSellingNumberPlan">
-                    <vr-whs-be-sellingnumberplan-selector normal-col-num="2" on-ready="onSellingNumberPlanDirectiveReady" selectedvalues="selectedSellingNumberPlans" ismultipleselection>
-                    </vr-whs-be-sellingnumberplan-selector>
-                </span>
+                    <span vr-loader="isLoadingSellingNumberPlan" ng-show="showSellingNumberPlan">
+                        <vr-whs-be-sellingnumberplan-selector normal-col-num="2" on-ready="onSellingNumberPlanDirectiveReady" selectedvalues="selectedSellingNumberPlans" ismultipleselection>
+                        </vr-whs-be-sellingnumberplan-selector>
+                    </span>
 
-                <span  ng-show="showZoneService">
-                    <vr-whs-be-zone-service-config-selector on-ready="onZoneServiceConfigSelectorReady"
-                                                            selectedvalues="servicesValues"
-                                                            normal-col-num="2"
-                                                            ismultipleselection="true">
-                    </vr-whs-be-zone-service-config-selector>
-                </span>
+                    <span ng-show="showZoneService">
+                        <vr-whs-be-zone-service-config-selector on-ready="onZoneServiceConfigSelectorReady"
+                                                                selectedvalues="servicesValues"
+                                                                normal-col-num="2"
+                                                                ismultipleselection="true">
+                        </vr-whs-be-zone-service-config-selector>
+                    </span>
 
 
-            </vr-row>
-        </div>
+                </vr-row>
+                </vr-validationgroup>
+</div>
 
         <vr-row removeline>
             <vr-actionbar showcollapsebutton="true" issectioncollapsed="filterSectionCollapsed">
                 <div transclude-to="buttons">
-                    <vr-button type="Search" formname="formFilter" data-onclick="searchClicked"></vr-button>
+                    <vr-button type="Search" validationcontext="validationForm" data-onclick="searchClicked"></vr-button>
                     <vr-button type="Add" data-onclick="AddNewCarrierAccount" haspermission="hadAddCarrierAccountPermission"></vr-button>
                 </div>
             </vr-actionbar>
