export to excel
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40446

--- a/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Routing.Web/WhS_Routing/Directives/RPRoute/Templates/RPRouteGridTemplate.html
@@ -6,7 +6,7 @@
                  on-ready="onGridReady"
                  menuactions="gridMenuActions"
                  defaultsortbyfieldname="'RoutingProductId'"
-                 getrowstyle="getRowStyle">
+                 getrowstyle="getRowStyle" enableautoexport="true">
 
         <vr-datagridcolumn headertext="'Routing Product'" field="'RoutingProductName'" disablesorting fixedwidth="100"></vr-datagridcolumn>
         <vr-datagridcolumn headertext="'Sale Zone'" field="'SaleZoneName'" disablesorting fixedwidth="200"></vr-datagridcolumn>
