--- a/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/BillingTransaction/Templates/BillingTransactionSearch.html
+++ b/Vanrise/Code/Vanrise.AccountBalance.Web/VR_AccountBalance/Directives/BillingTransaction/Templates/BillingTransactionSearch.html
@@ -17,7 +17,7 @@
     </vr-columns>
 </vr-row>
 <vr-row removeline>
-    <vr-columns width="fullrow">
+    <vr-columns width="fullrow" ng-if="!scopeModel.isLoading">
         <vr-accountbalance-billingtransaction-grid on-ready="scopeModel.onGridReady"></vr-accountbalance-billingtransaction-grid>
     </vr-columns>
 </vr-row>
