Export to excel
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40483

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/Templates/SwapDealGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/Templates/SwapDealGridTemplate.html
@@ -3,7 +3,7 @@
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              menuactions="scopeModel.menuActions"
              pagingtype="'PagingOnScroll'"
-             idfield="Entity.DealId">
+             idfield="Entity.DealId" enableautoexport="true">
     <vr-datagridcolumn headertext="'Description'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Carrier'" field="'CarrierAccountName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.Settings.BeginDate'" type="'Date'"></vr-datagridcolumn>
@@ -17,5 +17,5 @@
     <vr-datagridcolumn headertext="'Deal Type'" field="'TypeDescription'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Deal Contract'" field="'ContractDescription'" type="'Text'"></vr-datagridcolumn>
 
-    
+
 </vr-datagrid>
