--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/VolumeCommitment/Templates/VolumeCommitmentGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/VolumeCommitment/Templates/VolumeCommitmentGridTemplate.html
@@ -3,7 +3,7 @@
              dataretrievalfunction="scopeModel.dataRetrievalFunction"
              menuactions="scopeModel.menuActions"
              pagingtype="'PagingOnScroll'"
-             idfield="Entity.DealId">
+             idfield="Entity.DealId" enableautoexport="true">
     <vr-datagridcolumn headertext="'Id'" field="'Entity.DealId'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Description'" field="'Entity.Name'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Type'" field="'TypeDescription'" type="'Text'"></vr-datagridcolumn>
