--- a/Vanrise/Code/Vanrise.Notification.BP/ExecuteNotificationProcess.xaml
+++ b/Vanrise/Code/Vanrise.Notification.BP/ExecuteNotificationProcess.xaml
@@ -82,30 +82,39 @@
         </InArgument>
       </vnba1:UpdateNotificationStatus.VRNotificationId>
     </vnba1:UpdateNotificationStatus>
-    <ParallelForEach x:TypeArguments="vne:VRAction" DisplayName="ParallelForEach&lt;VRAction&gt;" sap2010:WorkflowViewState.IdRef="ParallelForEach`1_3">
-      <ParallelForEach.Values>
-        <InArgument x:TypeArguments="scg:IEnumerable(vne:VRAction)">
-          <mca:CSharpValue x:TypeArguments="scg:IEnumerable(vne:VRAction)">vrNotification.Data.Actions</mca:CSharpValue>
+    <If sap2010:WorkflowViewState.IdRef="If_1">
+      <If.Condition>
+        <InArgument x:TypeArguments="x:Boolean">
+          <mca:CSharpValue x:TypeArguments="x:Boolean">vrNotification.Data!=null &amp;&amp; vrNotification.Data.Actions != null</mca:CSharpValue>
         </InArgument>
-      </ParallelForEach.Values>
-      <ActivityAction x:TypeArguments="vne:VRAction">
-        <ActivityAction.Argument>
-          <DelegateInArgument x:TypeArguments="vne:VRAction" Name="action" />
-        </ActivityAction.Argument>
-        <local:ExecuteActionProcess sap2010:WorkflowViewState.IdRef="ExecuteActionProcess_1">
-          <local:ExecuteActionProcess.EventPayLoad>
-            <InArgument x:TypeArguments="vne:IVRActionEventPayload">
-              <mca:CSharpValue x:TypeArguments="vne:IVRActionEventPayload">vrNotification.Data.EventPayload</mca:CSharpValue>
+      </If.Condition>
+      <If.Then>
+        <ParallelForEach x:TypeArguments="vne:VRAction" DisplayName="ParallelForEach&lt;VRAction&gt;" sap2010:WorkflowViewState.IdRef="ParallelForEach`1_3">
+          <ParallelForEach.Values>
+            <InArgument x:TypeArguments="scg:IEnumerable(vne:VRAction)">
+              <mca:CSharpValue x:TypeArguments="scg:IEnumerable(vne:VRAction)">vrNotification.Data.Actions</mca:CSharpValue>
             </InArgument>
-          </local:ExecuteActionProcess.EventPayLoad>
-          <local:ExecuteActionProcess.VrAction>
-            <InArgument x:TypeArguments="vne:VRAction">
-              <mca:CSharpValue x:TypeArguments="vne:VRAction">action</mca:CSharpValue>
-            </InArgument>
-          </local:ExecuteActionProcess.VrAction>
-        </local:ExecuteActionProcess>
-      </ActivityAction>
-    </ParallelForEach>
+          </ParallelForEach.Values>
+          <ActivityAction x:TypeArguments="vne:VRAction">
+            <ActivityAction.Argument>
+              <DelegateInArgument x:TypeArguments="vne:VRAction" Name="action" />
+            </ActivityAction.Argument>
+            <local:ExecuteActionProcess sap2010:WorkflowViewState.IdRef="ExecuteActionProcess_1">
+              <local:ExecuteActionProcess.EventPayLoad>
+                <InArgument x:TypeArguments="vne:IVRActionEventPayload">
+                  <mca:CSharpValue x:TypeArguments="vne:IVRActionEventPayload">vrNotification.Data.EventPayload</mca:CSharpValue>
+                </InArgument>
+              </local:ExecuteActionProcess.EventPayLoad>
+              <local:ExecuteActionProcess.VrAction>
+                <InArgument x:TypeArguments="vne:VRAction">
+                  <mca:CSharpValue x:TypeArguments="vne:VRAction">action</mca:CSharpValue>
+                </InArgument>
+              </local:ExecuteActionProcess.VrAction>
+            </local:ExecuteActionProcess>
+          </ActivityAction>
+        </ParallelForEach>
+      </If.Then>
+    </If>
     <vnba1:UpdateNotificationStatus DisplayName="UpdateStatusCompleted" sap2010:WorkflowViewState.IdRef="UpdateNotificationStatus_2">
       <vnba1:UpdateNotificationStatus.Status>
         <InArgument x:TypeArguments="vne:VRNotificationStatus">
@@ -118,24 +127,25 @@
         </InArgument>
       </vnba1:UpdateNotificationStatus.VRNotificationId>
     </vnba1:UpdateNotificationStatus>
-    <sads:DebugSymbol.Symbol>d0tDOlxURlNcVmFucmlzZVxDb2RlXFZhbnJpc2UuTm90aWZpY2F0aW9uLkJQXEV4ZWN1dGVOb3RpZmljYXRpb25Qcm9jZXNzLnhhbWwROAN6DgIBATwFPFwCASQ9BUgfAgEdSQVUJgIBFlUFbBcCAQltBXgmAgECPEM8WQIBJUALQGkCASFFC0VcAgEeUQtRZwIBGkwLTHcCARdYC1h5AgETXwlqJgIBCnULdWcCAQZwC3B2AgEDYg9ifgIBD2cPZ1cCAQs=</sads:DebugSymbol.Symbol>
+    <sads:DebugSymbol.Symbol>d0tDOlxURlNcVmFucmlzZVxDb2RlXFZhbnJpc2UuTm90aWZpY2F0aW9uLkJQXEV4ZWN1dGVOb3RpZmljYXRpb25Qcm9jZXNzLnhhbWwTOAODAQ4CAQE8BTxcAgEoPQVIHwIBIUkFVCYCARpVBXUKAgEJdgWBASYCAQI8QzxZAgEpQAtAaQIBJUULRVwCASJRC1FnAgEeTAtMdwIBG1gLWJIBAgEKXAlzGwIBDX4LfmcCAQZ5C3l2AgEDXw9ffQIBF2YNcSoCAQ5pE2mCAQIBE24TblsCAQ8=</sads:DebugSymbol.Symbol>
   </Sequence>
   <sap2010:WorkflowViewState.ViewStateManager>
     <sap2010:ViewStateManager>
-      <sap2010:ViewStateData Id="WriteLine_1" sap:VirtualizedContainerService.HintSize="287,62" />
-      <sap2010:ViewStateData Id="GetVRNotification_2" sap:VirtualizedContainerService.HintSize="287,22" />
-      <sap2010:ViewStateData Id="UpdateNotificationStatus_1" sap:VirtualizedContainerService.HintSize="287,22" />
+      <sap2010:ViewStateData Id="WriteLine_1" sap:VirtualizedContainerService.HintSize="464,62" />
+      <sap2010:ViewStateData Id="GetVRNotification_2" sap:VirtualizedContainerService.HintSize="464,22" />
+      <sap2010:ViewStateData Id="UpdateNotificationStatus_1" sap:VirtualizedContainerService.HintSize="464,22" />
       <sap2010:ViewStateData Id="ExecuteActionProcess_1" sap:VirtualizedContainerService.HintSize="200,22" />
       <sap2010:ViewStateData Id="ParallelForEach`1_3" sap:VirtualizedContainerService.HintSize="287,210" />
-      <sap2010:ViewStateData Id="UpdateNotificationStatus_2" sap:VirtualizedContainerService.HintSize="287,22" />
-      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="309,622">
+      <sap2010:ViewStateData Id="If_1" sap:VirtualizedContainerService.HintSize="464,360" />
+      <sap2010:ViewStateData Id="UpdateNotificationStatus_2" sap:VirtualizedContainerService.HintSize="464,22" />
+      <sap2010:ViewStateData Id="Sequence_1" sap:VirtualizedContainerService.HintSize="486,772">
         <sap:WorkflowViewStateService.ViewState>
           <scg:Dictionary x:TypeArguments="x:String, x:Object">
             <x:Boolean x:Key="IsExpanded">True</x:Boolean>
           </scg:Dictionary>
         </sap:WorkflowViewStateService.ViewState>
       </sap2010:ViewStateData>
-      <sap2010:ViewStateData Id="Vanrise.Notification.BP.ExecuteNotificationProcess_1" sap:VirtualizedContainerService.HintSize="349,702" />
+      <sap2010:ViewStateData Id="Vanrise.Notification.BP.ExecuteNotificationProcess_1" sap:VirtualizedContainerService.HintSize="526,852" />
     </sap2010:ViewStateManager>
   </sap2010:WorkflowViewState.ViewStateManager>
 </Activity>
