Export to excel
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40492

--- a/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierRate/Templates/SupplierOtherRateGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.BusinessEntity.Web/WhS_BusinessEntity/Directives/SupplierRate/Templates/SupplierOtherRateGridTemplate.html
@@ -3,9 +3,9 @@
              dataretrievalfunction="dataRetrievalFunction"
              pagingtype="'PagingOnScroll'"
              menuactions="gridMenuActions"
-             idfield="Entity.SupplierRateId">
+             idfield="Entity.SupplierRateId" enableautoexport="true">
     <vr-datagridcolumn headertext="'ID'" field="'Entity.SupplierRateId'" type="'Text'"></vr-datagridcolumn>
-	<vr-datagridcolumn headertext="'Rate'" field="'Entity.Rate'" type="'Number'" numberprecision="'LongPrecision'"></vr-datagridcolumn>
+    <vr-datagridcolumn headertext="'Rate'" field="'Entity.Rate'" type="'Number'" numberprecision="'LongPrecision'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Rate Type'" field="'RateTypeDescription'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Currency'" field="'CurrencyName'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'BED'" field="'Entity.BED'" type="'Date'"></vr-datagridcolumn>
