implementing object tracking drill down in swap deal and volume commitment
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C40504

--- a/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/Templates/SwapDealGridTemplate.html
+++ b/TOneV2/Code/TOneV2/TOne.WhS.Deal.Web/WhS_Deal/Directives/SwapDeal/Templates/SwapDealGridTemplate.html
@@ -17,5 +17,7 @@
     <vr-datagridcolumn headertext="'Deal Type'" field="'TypeDescription'" type="'Text'"></vr-datagridcolumn>
     <vr-datagridcolumn headertext="'Deal Contract'" field="'ContractDescription'" type="'Text'"></vr-datagridcolumn>
 
-
+    <vr-datagridexpandablerow>
+        <vr-directivetabs tabitems="dataItem.drillDownExtensionObject.drillDownDirectiveTabs"></vr-directivetabs>
+    </vr-datagridexpandablerow>
 </vr-datagrid>
